# OS_LABS_MAI

./: .gitignore
course/messenger/: CMakeLists.txt
course/messenger/client/: client.cpp  client.hpp  main_client.cpp  thread.hpp
course/messenger/common/: message.cpp  message.hpp
course/messenger/server/: main_server.cpp  server.cpp  server.hpp
course/messenger/thread/: thread.cpp  thread.hpp
lab1/: CMakeLists.txt  main.cpp
lab1/include/: child.h  os.h  parent.h  stringprocessor.h
lab1/src/: child.cpp  os.cpp  parent.cpp  stringprocessor.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: sort.h  utils.h
lab2/src/: sort.cpp  utils.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: child.h  os.h  parent.h  stringprocessor.h
lab3/src/: child.cpp  child_main.cpp  os.cpp  parent.cpp  stringprocessor.cpp
lab4/: CMakeLists.txt  program1_setA.cpp  program1_setB.cpp  program2_dynamic.cpp
lab4/include/: dynamic_library.h  pi_contract.h  prime_contract.h
lab4/lib/: eratosthenes_prime.cpp  leibniz_pi.cpp  naive_prime.cpp  wallis_pi.cpp
lab4/src/: dynamic_library.cpp
